// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`address route > enhanced data 1`] = `
{
  "canonical": undefined,
  "description": "View the account balance, transactions, and other data for duck.eth on the Blockscout (Blockscout) Explorer",
  "jsonLd": undefined,
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Blockscout address details for duck.eth | Blockscout",
  },
  "title": "Blockscout address details for duck.eth | Blockscout",
}
`;

exports[`address route > no enhanced data 1`] = `
{
  "canonical": undefined,
  "description": "View the account balance, transactions, and other data for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859 on the Blockscout (Blockscout) Explorer",
  "jsonLd": undefined,
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Blockscout address details for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859 | Blockscout",
  },
  "title": "Blockscout address details for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859 | Blockscout",
}
`;

exports[`dynamic route 1`] = `
{
  "canonical": undefined,
  "description": "View transaction 0x62d597ebcf3e8d60096dd0363bc2f0f5e2df27ba1dacd696c51aa7c9409f3193 on Blockscout (Blockscout) Explorer",
  "jsonLd": undefined,
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Blockscout transaction 0x62d597ebcf3e8d60096dd0363bc2f0f5e2df27ba1dacd696c51aa7c9409f3193 | Blockscout",
  },
  "title": "Blockscout transaction 0x62d597ebcf3e8d60096dd0363bc2f0f5e2df27ba1dacd696c51aa7c9409f3193 | Blockscout",
}
`;

exports[`static route 1`] = `
{
  "canonical": "http://localhost:3000/txs",
  "description": "Browse the latest Blockscout transactions on the Blockscout (Blockscout) Explorer. Track transaction status, fees, and details in real time.",
  "jsonLd": undefined,
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "Blockscout transactions - Blockscout explorer | Blockscout",
  },
  "title": "Blockscout transactions - Blockscout explorer | Blockscout",
}
`;

exports[`stats details route > enhanced data 1`] = `
{
  "canonical": undefined,
  "description": "Cumulative account growth over time",
  "jsonLd": undefined,
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Number of accounts chart on Blockscout | Blockscout",
  },
  "title": "Number of accounts chart on Blockscout | Blockscout",
}
`;

exports[`stats details route > no enhanced data 1`] = `
{
  "canonical": undefined,
  "description": "Explore the accountsGrowth chart with historical Blockscout network data on the Blockscout (Blockscout) Explorer.",
  "jsonLd": undefined,
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Blockscout stats - Accounts growth chart | Blockscout",
  },
  "title": "Blockscout stats - Accounts growth chart | Blockscout",
}
`;
